[project]
name = "xltm"
version = "0.0.1"
authors = [
  { name="Ian Edwards", email="ian.contact@proton.me" },
]
description = "Converts Excel files into csv tilemaps with corresponding image files"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ian-edwards/xltm"
Issues = "https://github.com/ian-edwards/xltm/issues"